--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Uvodna stranica - Uputstvo</title> 
     <link rel="stylesheet" href="style-final.css">
     <script>
-        const allPages = [{"title":"Uvodna stranica","url":"uvodna-stranica.html"},{"title":"Šeme knjiženja","url":"seme-knjizenja.html"},{"title":"Test","url":"test.html"},{"title":"Nova stranica","url":"nova-stranica.html"}]; // Ugrađujemo podatke o stranicama
+        const allPages = [{"title":"Uvodna stranica","url":"uvodna-stranica.html"},{"title":"Šeme knjiženja","url":"seme-knjizenja.html"},{"title":"Obračun plate radnika","url":"obracun-plate-radnika.html"},{"title":"Unos osnovnih podataka o radnicima","url":"unos-osnovnih-podataka-o-radnicima.html"},{"title":"Vid isplate","url":"vid-isplate.html"},{"title":"Radnik - Ugovor","url":"radnik-ugovor.html"}]; // Ugrađujemo podatke o stranicama
 
         function searchContent() {
             const searchTerm = document.getElementById('search-input').value.toLowerCase(); // Pretraga je case-insensitive
@@ -40,10 +40,18 @@
             </div>
         </header>
         <div id="search-results"></div>
-        <main class="proza"><h1>Upustvo za rad sa aplikacijom <strong class="highlighted-text">SINERGIS</strong></h1>
-<h4>Sadržaj</h4>
+        <main class="proza"><h1>Uputstvo za rad sa aplikacijom <strong class="highlighted-text">SINERGIS</strong></h1>
+<h4>LETEĆI START</h4>
 <ul>
-<li><a href="seme-knjizenja.html">Kako kreirati šeme knjiženja</a></li>
+<li><a href="obracun-plate-radnika.html">OBRAČUN PLATE I TOPLOG OBROKA</a></li>
+<li><a href="seme-knjizenja.html">KREIRANJE ŠEMA KNJIŽENJA</a></li>
+</ul>
+<h4>KADROVI</h4>
+<ul>
+<li><a href="obracun-plate-radnika.html">Obračun zarade</a></li>
+<li><a href="unos-osnovnih-podataka-o-radnicima.html">Evidencija radnika</a></li>
+<li><a href="vid-isplate.html">Vid isplate</a></li>
+<li><a href="radnik-ugovor.html">Radnik UGOVOR</a></li>
 </ul>
 </main>
     </div>
