--- a/kontni-okvir.html
+++ b/kontni-okvir.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Uvodna stranica - Uputstvo</title> 
+    <title>Kontni okvir - Uputstvo</title> 
     <link rel="stylesheet" href="style-final.css">
     <script>
         const allPages = [{"title":"Uvodna stranica","url":"uvodna-stranica.html"},{"title":"Šeme knjiženja","url":"seme-knjizenja.html"},{"title":"Obračun plate radnika","url":"obracun-plate-radnika.html"},{"title":"Unos osnovnih podataka o radnicima","url":"unos-osnovnih-podataka-o-radnicima.html"},{"title":"Vid isplate","url":"vid-isplate.html"},{"title":"Radnik - Ugovor","url":"radnik-ugovor.html"},{"title":"Kontni okvir","url":"kontni-okvir.html"}]; // Ugrađujemo podatke o stranicama
@@ -40,19 +40,16 @@
             </div>
         </header>
         <div id="search-results"></div>
-        <main class="proza"><h1>Uputstvo za rad sa aplikacijom <strong class="highlighted-text">SINERGIS</strong></h1>
-<h4>LETEĆI START</h4>
-<ul>
-<li><a href="obracun-plate-radnika.html">OBRAČUN PLATE I TOPLOG OBROKA</a></li>
-<li><a href="seme-knjizenja.html">KREIRANJE ŠEMA KNJIŽENJA</a></li>
-</ul>
-<h4>KADROVI</h4>
-<ul>
-<li><a href="obracun-plate-radnika.html">Obračun zarade</a></li>
-<li><a href="unos-osnovnih-podataka-o-radnicima.html">Evidencija radnika</a></li>
-<li><a href="vid-isplate.html">Vid isplate</a></li>
-<li><a href="radnik-ugovor.html">Radnik UGOVOR</a></li>
-</ul>
+        <main class="proza"><h1>Kontni plan</h1>
+<p><strong class="highlighted-text">Sinergis</strong> omogućava jednostavno upravljanje sa kontnim planom. Podešavanje i izmjene kontnog plana možete da uraditi putem menija <code>Finansije</code> i linka <code>Kontni plan</code>.</p>
+<p>Prvo što ćete uraditi kada otvorite stranicu kontni plan je da pronađete kontni okvir koji koristite. Pronaći ćete ga klikom na dugme <code>Traži</code> i izborom kontnog okvira koji ćete koristiti (najšešće ćete već dobiti ispravan kontni plan). </p>
+<p><img src="images/finansije-kontni-plan.PNG" alt=""></p>
+<p>Na desnoj strani postoji forma za unos i izmjenu kontnog plana. Ovdje možete da dodate konto ili da postojećem kontu promjeniti opis.  </p>
+<p>Konto možete da definišete prema karakteristikama i poziciji u kontnom okviru gdje ga unosite pa tako možete da ga vežete za kupca ili dobavljača, da mu odredite stranu knjiženja,da li je sastavni dio bilansa (ili vanbilansni konto), da li je u pitanju aktivan ili pasivan konto, te da li se stanje na tom kontu na kraju godine prenosi u početno stanje.</p>
+<p>Pored ovog, možete da precizno odredite karakteristike konta, tj. da odredite da li je konto vezan za komintenta, da li pripada nekoj organizacionoj jedinici, da li je povezan sa radnikom, da li zahtjeva vrstu troška, da li je sastavni dio nekog projekta ili je vezan za neku vrstu osnovnog sredstva. </p>
+<blockquote>
+<p>Konta koja su korištena prilikom knjiženja, tj. ona konta koja su imala određene transakcije nije moguće brisati (bez obzira što im je vrijednost <code>0</code> ali im je moguće promjeniti i opis i šifru.</p>
+</blockquote>
 </main>
     </div>
 </body>
