--- a/vid-isplate.html
+++ b/vid-isplate.html
@@ -6,7 +6,7 @@
     <title>Vid isplate - Uputstvo</title> 
     <link rel="stylesheet" href="style-final.css">
     <script>
-        const allPages = [{"title":"Uvodna stranica","url":"uvodna-stranica.html"},{"title":"Šeme knjiženja","url":"seme-knjizenja.html"},{"title":"Obračun plate radnika","url":"obracun-plate-radnika.html"},{"title":"Unos osnovnih podataka o radnicima","url":"unos-osnovnih-podataka-o-radnicima.html"},{"title":"Vid isplate","url":"vid-isplate.html"},{"title":"Radnik - Ugovor","url":"radnik-ugovor.html"}]; // Ugrađujemo podatke o stranicama
+        const allPages = [{"title":"Uvodna stranica","url":"uvodna-stranica.html"},{"title":"Šeme knjiženja","url":"seme-knjizenja.html"},{"title":"Obračun plate radnika","url":"obracun-plate-radnika.html"},{"title":"Unos osnovnih podataka o radnicima","url":"unos-osnovnih-podataka-o-radnicima.html"},{"title":"Vid isplate","url":"vid-isplate.html"},{"title":"Radnik - Ugovor","url":"radnik-ugovor.html"},{"title":"Kontni okvir","url":"kontni-okvir.html"}]; // Ugrađujemo podatke o stranicama
 
         function searchContent() {
             const searchTerm = document.getElementById('search-input').value.toLowerCase(); // Pretraga je case-insensitive
