--- a/uvodna-stranica.html
+++ b/uvodna-stranica.html
@@ -53,6 +53,10 @@
 <li><a href="vid-isplate.html">Vid isplate</a></li>
 <li><a href="radnik-ugovor.html">Radnik UGOVOR</a></li>
 </ul>
+<h4>FINANSIJE</h4>
+<ul>
+<li><a href="kontni-okvir.html">Kontni plan</a></li>
+</ul>
 </main>
     </div>
 </body>
